[package]
name = "nostrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
tokio-websockets = { version = "0.2.0", features = ["native-tls"] }
http = "0.2.8"
url = { version = "2", features = ["serde"] }
tokio = { version = "1.23.0", features = ["full"] }
futures-util = "0.3.25"
serde = "1.0.152"
eyre = "0.6.8"
sha2 = "0.10.6"
